--- a/Project K/Packages/manifest.json
+++ b/Project K/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
+    "com.unity.toonshader": "0.9.6-preview",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.xr.interaction.toolkit": "2.4.3",
     "com.unity.xr.management": "4.4.0",
