--- a/Project K/ProjectSettings/Packages/com.unity.testtools.codecoverage/Settings.json
+++ b/Project K/ProjectSettings/Packages/com.unity.testtools.codecoverage/Settings.json
@@ -15,6 +15,11 @@
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "HistoryPath",
                 "value": "{\"m_Value\":\"{ProjectPath}\"}"
+            },
+            {
+                "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "PathsToInclude",
+                "value": "{\"m_Value\":\"{ProjectPath}/Assets/Scripts/Player/PowerManager.cs\"}"
             }
         ]
     }
