--- a/Project K/Packages/manifest.json
+++ b/Project K/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.learn.iet-framework": "3.1.3",
     "com.unity.memoryprofiler": "1.1.0",
     "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.splines": "2.3.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.visualscripting": "1.8.0",
